--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Flag_of_R%C3%A9union.svg" alt="Drapeau de La Réunion" class="flag">
+        <img src="Proposed_flag_of_Réunion_(VAR).svg.png" alt="Drapeau de La Réunion" class="flag">
         <div class="boxes">
             <div class="box">
                 <img src="https://via.placeholder.com/100" alt="Profil 1">
