--- a/index.html
+++ b/index.html
@@ -55,19 +55,23 @@
         <img src="Proposed_flag_of_Réunion_(VAR).svg.png" alt="Drapeau de La Réunion" class="flag">
         <div class="boxes">
             <div class="box">
-                <img src="https://via.placeholder.com/100" alt="Profil 1">
+                <img src="Unknown.heic" alt="Profil 1">
                 <p class="email">email1@example.com</p>
             </div>
             <div class="box">
-                <img src="https://via.placeholder.com/100" alt="Profil 2">
+                <img src="Unknown-1.heic" alt="Profil 2">
                 <p class="email">email2@example.com</p>
             </div>
             <div class="box">
-                <img src="https://via.placeholder.com/100" alt="Profil 3">
+                <img src="Unknown-2.heic" alt="Profil 3">
                 <p class="email">email3@example.com</p>
             </div>
             <div class="box">
-                <img src="https://via.placeholder.com/100" alt="Profil 4">
+                <img src="Unknown-"3.heic" alt="Profil 4">
+                <p class="email">email4@example.com</p>
+            </div>
+             <div class="box">
+                <img src="Unknown-4.heic" alt="Profil 4">
                 <p class="email">email4@example.com</p>
             </div>
         </div>
