--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p class="email">email3@example.com</p>
             </div>
             <div class="box">
-                <img src="Unknown-"3.heic" alt="Profil 4">
+                <img src="Unknown-3.heic" alt="Profil 4">
                 <p class="email">email4@example.com</p>
             </div>
              <div class="box">
