--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
         <div class="boxes">
             <div class="box">
                 <img src="Unknown.heic" alt="Profil 1">
-                <p class="email">email1@example.com</p>
+                <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
                 <img src="Unknown-1.heic" alt="Profil 2">
-                <p class="email">email2@example.com</p>
+                <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
                 <img src="Unknown-2.heic" alt="Profil 3">
-                <p class="email">email3@example.com</p>
+                <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
                 <img src="Unknown-3.heic" alt="Profil 4">
-                <p class="email">email4@example.com</p>
+                <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
              <div class="box">
                 <img src="Unknown-4.heic" alt="Profil 4">
-                <p class="email">email4@example.com</p>
+                <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
         </div>
     </div>
