--- a/index.html
+++ b/index.html
@@ -55,22 +55,27 @@
         <img src="Proposed_flag_of_Réunion_(VAR).svg.png" alt="Drapeau de La Réunion" class="flag">
         <div class="boxes">
             <div class="box">
+                <p>machin</p>
                 <img src="Unknown.heic" alt="Profil 1">
                 <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
+                <p>machin</p>
                 <img src="Unknown-1.heic" alt="Profil 2">
                 <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
+                <p>adrien</p>
                 <img src="Unknown-2.heic" alt="Profil 3">
                 <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
             <div class="box">
+                <p>machin</p>
                 <img src="Unknown-3.heic" alt="Profil 4">
                 <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
              <div class="box">
+                 <p>guilhem</p>
                 <img src="Unknown-4.heic" alt="Profil 4">
                 <a href="email@exemple.com" class="email">email@example.com</a>
             </div>
