--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Proposed_flag_of_Réunion_(VAR).svg.png" alt="Drapeau de La Réunion" class="flag">
+        <img src="LaReunion.png" alt="Drapeau de La Réunion" class="flag">
         <div class="boxes">
             <div class="box">
                 <p>machin</p>
