--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="mailto:H.H.Delisle@gmail.com" class="email">H.H.Delisle@gmail.com</a>
             </div>
             <div class="box">
-                <p>adrien</p>
+                <p>Adrien</p>
                 <img src="Unknown-2.heic" alt="Profil 3">
                 <a href="mailto:adrienfrappier@me.com" class="email">adrienfrappier@me.com</a>
             </div>
@@ -81,7 +81,7 @@
                 <a href="mailto:maeltatard@gmail.com" class="email">maeltatard@gmail.com</a>
             </div>
              <div class="box">
-                 <p>guilhem</p>
+                 <p>Guilhem</p>
                 <img src="Unknown-4.heic" alt="Profil 4">
                 <a href="mailto:guilhemhart@gmail.com" class="email">guilhemhart@gmail.com</a>
             </div>
