--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="mailto:karimtatard@gmail.com" class="email">karimtatard@gmail.com</a>
             </div>
             <div class="box">
-                <p>Baby</p>
+                <p>Henry</p>
                 <img src="Unknown-1.heic" alt="Profil 2">
                 <a href="mailto:H.H.Delisle@gmail.com" class="email">H.H.Delisle@gmail.com</a>
             </div>
