--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <a href="mailto:karimtatard@gmail.com" class="email">karimtatard@gmail.com</a>
             </div>
             <div class="box">
-                <p>Henry</p>
+                <p>Baby</p>
                 <img src="Unknown-1.heic" alt="Profil 2">
-                <a href="mailto:H.H.Delisle@gmail.com" class="email">H.H.Delisle@gmail.com</a>
+                <a href="mailto:h.h.delisle@gmail.com" class="email">h.h.delisle@gmail.com</a>
             </div>
             <div class="box">
                 <p>Adrien</p>
